# PCConfig

./: README.md
PCConfig Backend/: apispec.json  buildgen.py  compatibility.py  db.py  main.py  ml.py  pyproject.toml  schema.json  vars.py
PCConfig Backend/csv/: builds.csv  builds_backup.csv  cpus.csv  cpus_processed.csv  gpus_processed.csv  motherboards.csv  motherboards_processed.csv  psus.csv  psus_processed.csv  rams_processed.csv  storages.csv  storages_processed.csv  users.csv  users_backup.csv
PCConfig Frontend/: package.json
PCConfig Frontend/components/Filter/: index.js
PCConfig Frontend/components/Footer/: index.js
PCConfig Frontend/components/NavCard/: index.js
PCConfig Frontend/components/Navbar/: index.js
PCConfig Frontend/components/ProductCard/: index.js
PCConfig Frontend/components/SearchCard/: index.js
PCConfig Frontend/pages/: index.js  test.js
PCConfig Frontend/pages/builds/: build.js  index.js
PCConfig Frontend/pages/generate/: index.js
PCConfig Frontend/pages/login/: index.js
PCConfig Frontend/pages/product/: index.js
PCConfig Frontend/pages/searchpage/: [product].js
PCConfig Frontend/pages/signup/: index.js
