[tool.poetry]
name = "pcconfig"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
replit = "^2.0.0"
psycopg2-binary = "^2.8.6"
pg8000 = "^1.18.0"
sqlalchemy = "^1.4.2"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
